--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
         <title>nexter &mdash; your home, your freedom</title>
     </head>
     <body class="container">
-        
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente nobis cum iure molestias incidunt debitis, ratione possimus culpa voluptatibus neque alias repellat deleniti! Ullam saepe repellat mollitia, maxime sint dolores.
     </body>
 </html>
